<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".UI.SaleDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        tools:ignore="UselessParent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginEnd="@dimen/inter_space_large"
                android:layout_marginTop="40dp"
                android:background="@drawable/boxed"
                android:maxLength="50"
                android:maxLines="1"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginEnd="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/general_margin"
                android:background="@drawable/boxed"
                android:maxLength="50"
                android:maxLines="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/button_shadow_margin"
                android:layout_marginTop="@dimen/inter_space_large"
                android:onClick="submit"
                android:background="@drawable/rounded_corner_button_colored"
                android:textColor="@color/white"
                android:textSize="@dimen/default_button_text_size"
                android:text="@string/sign_in" />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/inter_space_large"
                android:layout_height="1dp"
                android:alpha="0.7"
                android:background="@android:color/darker_gray" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_space_large">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/noAccountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/medium_textView_text_size"
                    android:textColor="@android:color/secondary_text_light"
                    android:text="@string/no_account" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/button_shadow_margin"
                    android:layout_marginBottom="@dimen/button_shadow_margin"
                    android:onClick="toSignup"
                    android:background="@drawable/rounded_corner_button_colored"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_button_text_size"
                    android:text="@string/sign_up"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

            </TableRow>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>