<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignInSuccessActivity">

    <TextView
        android:id="@+id/authenticationSuccessfulText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/authentication_successful"
        app:layout_constraintBaseline_toBaselineOf="@+id/signOutButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="signOut"
        android:text="Sign out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toEndOf="@+id/authenticationSuccessfulText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toMainButton"
        android:layout_width="202dp"
        android:layout_height="69dp"
        android:onClick="toMain"
        android:text="Go to main page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/activity_main_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/bottomBarBackground"
        app:itemIconTint="@color/bottomBarContent"
        app:itemTextColor="@color/bottomBarContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@layout/bottom_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>